--- a/ReplyTestTask/ReplyTestTask.csproj
+++ b/ReplyTestTask/ReplyTestTask.csproj
@@ -21,4 +21,10 @@
     <Folder Include="Support\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Setup\SetUp.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
